--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+  flutter_launcher_icons: "^0.9.0"
+
+flutter_icons:
+  image_path: "icon/d10.png" 
+  android: true
+  ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
