--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,19 +147,19 @@ jobs:
         Copy-Item (vswhere -latest -find 'VC\Redist\MSVC\*\x64\*\vcruntime140_1.dll') .
     - name: Rename build for Android
       if: matrix.target == 'Android'
-      run: mv app-release.apk $GITHUB_WORKSPACE/vtm_dice_roller${{ matrix.target }}.apk
+      run: mv app-release.apk $GITHUB_WORKSPACE/vtm_dice_roller_${{ matrix.target }}.apk
       working-directory: ${{ matrix.build_path }}
     - name: Compress build for Linux
       if: matrix.target == 'Linux'
-      run: tar czf $GITHUB_WORKSPACE/vtm_dice_roller${{ matrix.target }}.tar.gz *
+      run: tar czf $GITHUB_WORKSPACE/vtm_dice_roller_${{ matrix.target }}.tar.gz *
       working-directory: ${{ matrix.build_path }}
     - name: Compress build for macOS
       if: matrix.target == 'macOS'
-      run: ditto -c -k --sequesterRsrc --keepParent Flutter\ VtMDiceRoller.app $GITHUB_WORKSPACE/vtm_dice_roller${{ matrix.target }}.zip
+      run: ditto -c -k --sequesterRsrc --keepParent Flutter\ VtMDiceRoller.app $GITHUB_WORKSPACE/vtm_dice_roller_${{ matrix.target }}.zip
       working-directory: ${{ matrix.build_path }}
     - name: Compress build for Windows
       if: matrix.target == 'Windows'
-      run: compress-archive -Path * -DestinationPath ${env:GITHUB_WORKSPACE}\vtm_dice_roller${{ matrix.target }}.zip
+      run: compress-archive -Path * -DestinationPath ${env:GITHUB_WORKSPACE}\vtm_dice_roller_${{ matrix.target }}.zip
       working-directory: ${{ matrix.build_path }}
 
     # Upload the build.
